# paraluton_2_0

./: CUDAtoHIPCMakeLists.txt
paralution-1.1.0/: .FindHIP.cmake.swp  .info.txt.swp  CMakeLists.txt
paralution-1.1.0/src/: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt
paralution-1.1.0/src/base/: CMakeLists.txt  backend_manager.cpp
paralution-1.1.0/src/base/gpu/: backend_gpu.cu  cusparse_csr.hpp  gpu_matrix_bcsr.cu  gpu_matrix_coo.cu  gpu_matrix_csr.cu  gpu_matrix_csr.hpp  gpu_matrix_dia.cu  gpu_matrix_hyb.cu  gpu_matrix_mcsr.cu  gpu_utils.hpp  gpu_vector.cu
paralution-1.1.0/src/examples/: CMakeLists.txt
paralution-1.1.0/src/utils/: allocate_free.cpp
